# scdecon

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
config/: example_run.yaml
data/: README.md
docs/: cli.md  generate_figures.py  getting-started.md  index.md
docs/api/: deconvolution.md  genes.md  index.md  io.md  plotting.md  preprocessing.md  signature.md  simulation.md  validation.md
docs/architecture/: ADR-0001-src-layout-and-tooling.md  ADR-0002-mypy-python-version.md  ADR-0003-io-layer-contract.md  ADR-0004-preprocessing-contracts.md  ADR-0005-markerselector-and-rankmethod.md  ADR-0006-signature-as-dataframe.md  ADR-0007-marker-strategy.md  ADR-0008-plotting-separation.md  ADR-0009-deconvolution-solver-and-alignment.md  ADR-0010-real-data-ingestion-and-gene-harmonisation.md  ADR-0013-cli-composition-root.md  README.md
docs/tutorials/: melanoma-tme.md
scripts/: __init__.py  download_data.py  melanoma_workflow.py
scripts/datasets/: __init__.py  _io.py  annotations.py  recount3.py  tirosh.py
src/scdecon/: __init__.py  cli.py  config.py  genes.py  logging_utils.py
src/scdecon/deconvolution/: __init__.py  align.py  base.py  benchmark.py  deconvolve.py  nnls.py  nusvr.py  params.py  robust.py
src/scdecon/io/: __init__.py  readers.py  writers.py
src/scdecon/plotting/: __init__.py  figures.py
src/scdecon/preprocessing/: __init__.py  normalize.py  params.py  pipeline.py  qc.py
src/scdecon/signature/: __init__.py  build.py  markers.py  params.py
src/scdecon/simulation/: __init__.py  params.py  pseudobulk.py
src/scdecon/validation/: __init__.py  metrics.py
tests/: conftest.py  test_smoke.py
tests/data/: toy_bulk.tsv  toy_metadata.csv
tests/integration/: test_pipeline.py
tests/unit/: test_align.py  test_architecture.py  test_base.py  test_benchmark.py  test_build.py  test_cli.py  test_config.py  test_dataset_annotations.py  test_dataset_recount3.py  test_dataset_tirosh.py  test_deconvolution_params.py  test_deconvolve.py  test_download_data.py  test_figures.py  test_genes.py  test_logging_utils.py  test_markers.py  test_melanoma_workflow.py  test_metrics.py  test_nnls.py  test_normalize.py  test_nusvr.py  test_params.py  test_pseudobulk.py  test_qc.py  test_readers.py  test_recovery.py  test_robust.py  test_signature_params.py  test_simulation_params.py  test_workflow.py  test_writers.py
workflow/: Snakefile
