[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scdecon"
description = "Single-cell-reference deconvolution of bulk tumour transcriptomes."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Prisha Sanyal-Aich", email = "palok.aich@gmail.com" }]
keywords = ["bioinformatics", "single-cell", "deconvolution", "rna-seq"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]
# Runtime dependencies live here (not only in environment.yml) because
# pyproject.toml is the installable-package source of truth: every `pip install`
# path -- plain pip, CI, and Docker -- resolves from this list. environment.yml
# is a convenience conda env that installs the package via pip and inherits
# these transitively; duplicating them there would risk drift.
dependencies = [
    "anndata>=0.10",
    "numpy>=1.26",
    "pandas>=2.0",
    "scanpy>=1.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pre-commit>=3.7",
    "pandas-stubs>=2.0",
]

[tool.setuptools.dynamic]
version = { attr = "scdecon.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
strict = true
files = ["src", "tests"]

# anndata's source uses newer syntax than our 3.11 target; treat it as opaque
# rather than type-checking the library itself.
[[tool.mypy.overrides]]
module = ["anndata.*"]
follow_imports = "skip"
ignore_missing_imports = true

# scanpy ships no usable type information; treat it as opaque like anndata.
[[tool.mypy.overrides]]
module = ["scanpy.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
